@@ -8,5 +8,5 @@
 #++
 
 module Gem
-  RubyGemsVersion = '0.8.11.99'
+  RubyGemsVersion = '0.8.99'
 end
